<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable name="content" type="com.brutcode.seedapp.model.Content" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.brutcode.seedapp.ui.result.ResultActivity">



        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                 />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               >

                <TextView
                    android:id="@+id/textview_result_main_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@{content.title}" />
                <TextView
                    android:id="@+id/textview_result_main_text_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@{content.year}" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="200dp">

                        <com.facebook.drawee.view.SimpleDraweeView
                            android:id="@+id/drawee_result_bg"
                            android:layout_width="fill_parent"
                            android:layout_height="240dp"
                            fresco:failureImage="@drawable/placeholder_poster"
                            fresco:failureImageScaleType="centerCrop"
                            fresco:placeholderImage="@drawable/placeholder_poster"
                            fresco:placeholderImageScaleType="centerCrop"
                            fresco:actualImageScaleType="centerCrop"
                            android:layout_gravity="right|top" />


                        <com.facebook.drawee.view.SimpleDraweeView
                            android:id="@+id/drawee_result_poster"
                            android:layout_width="fill_parent"
                            android:layout_height="240dp"
                            fresco:actualImageScaleType="fitCenter"
                            android:layout_alignParentTop="@id/drawee_result_bg"
                            android:layout_gravity="right|top" />

                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textview_result_main_plot_pre"
                                android:text="@string/str_detail_plot"
                                android:textStyle="bold"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textview_result_main_plot"
                                android:text="@{content.plot}"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textview_result_main_direc_pre"
                                android:text="@string/str_detail_director"
                                android:textStyle="bold"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textview_result_main_direc"
                                android:text="@{content.director}"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textview_result_main_country_pre"
                                android:text="@string/str_detail_country"
                                android:textStyle="bold"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textview_result_main_country"
                                android:text="@{content.country}"
                                />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textview_result_main_writ_pre"
                                android:text="@string/str_detail_writer"
                                android:textStyle="bold"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textview_result_main_writer"
                                android:text="@{content.writer}"
                                />
                        </LinearLayout>




                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </android.support.design.widget.CoordinatorLayout>
</layout>